# scaling

./: .gitignore  AGENTS.md  BUILD.md  CHEATSHEET.md  README.md  pyproject.toml
experiments/: run_bulletproof.py  run_complexity_sweep.py  run_deep_cfr.py  run_fast_scaling.py  run_lock_claim.py  run_nlhe_selfplay.py  run_scaling_D.py  run_scaling_N.py  run_scaling_nlhe.py
paper/: main.tex  neurips_2024.sty
results/bulletproof/: bulletproof_results.json
results/complexity_sweep/: all_complexity_results.json  c4_c5_results.json  complexity_sweep.json
results/fast_scaling/: fast_scaling_results.json
results/lock_claim/: lock_claim_results.json
results/mlp_vs_transformer/: d_scaling_comparison.json
results/scaling_D/: scaling_D_leduc.json
results/scaling_N/: scaling_N_leduc.json
rust_ehs/: Cargo.toml
rust_ehs/src/: lib.rs  nlhe_engine.rs
src/: __init__.py
src/cfr/: __init__.py  dcfr.py  mccfr.py  solver.py  vanilla_cfr.py
src/evaluation/: __init__.py
src/games/: __init__.py  base.py  kuhn.py  leduc.py  leduc_parameterized.py  nlhe.py  nlhe_abstraction.py  nlhe_infoset.py
src/models/: __init__.py  base.py  configs.py  grouped_transformer.py  mlp.py  transformer.py
src/training/: __init__.py  deep_cfr.py  losses.py  self_play.py  trainer.py
tests/: __init__.py  test_cfr.py  test_data.py  test_games.py
