[package]
name = "poker_ehs"
version = "0.1.0"
edition = "2021"

[lib]
name = "poker_ehs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
rand = "0.8"
rand_xoshiro = "0.6"
rayon = "1.10"
parking_lot = "0.12"
rustc-hash = "2.0"  # FxHash - fastest hash for ints
num_cpus = "1.16"
once_cell = "1.19"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true

[profile.bench]
inherits = "release"
debug = false
